--- a/agroecology.Rmd
+++ b/agroecology.Rmd
@@ -119,20 +119,19 @@ Agents determine how much land they need, calculate the yields from their land, 
 
 First define some parameters relating to food production and consumption.
 ```{r food_params}
-max.yield <- 1500 # maximum possible wheat yield, in kg/ha, should range from 1000 - 2000
+max.yield <- 1000 # maximum possible wheat yield, in kg/ha, should range from 1000 - 2000
 
 calorie.req <- 2582 * 365  # annual individual calorie requirement, derived from daily requirement
 wheat.calories <- 3320 # calories in a kg of wheat
-wheat.cal.proportion <- 0.75 # percent of individual's food calories coming from wheat
+wheat.cal.proportion <- 1 # percent of individual's food calories coming from wheat
 wheat.req <- calorie.req / wheat.calories * wheat.cal.proportion # kg of wheat to feed a person for 1 year
 
 sowing_rate <- 135  # kg of wheat to sow a hectare (range 108 - 135 from Roman agronomists)
 seed_proportion <- 135 / max.yield # proportion of harvest to save as seed for next year's sowing
 
 labor.per.hectare <- 40 # person days per hectare
-max.ag.labor <- 300 # maximum days per year an individual can devote to farming
-max.memory <- 15 # maximum number of years a household remembers
-production_elasticity <- 0.2
+max.ag.labor <- 280 # maximum days per year an individual can devote to farming
+memory_length <- 10 #  number of years a household remembers
 ```
 
 Crop yields are determined by rainfall and soil fertility.
@@ -533,27 +532,143 @@ slope <- do.call(mosaic, elev.list) %>%
   terrain(opt = 'slope', unit = 'degrees')
 ```
 
+```{r echo = F}
+p2 <-  aggregate(slope, fact = 10, fun = median) %>%
+  mask(elevation) %>%
+  as.data.frame(xy = T, na.rm = T) %>%
+  ggplot(aes(x, y)) +
+  geom_raster(aes(fill = slope)) +
+  scale_fill_viridis(name = 'Degrees', option = 'B', guide = 'legend') +
+  theme_void() +
+  coord_quickmap() +
+  labs(title = 'Slope') +
+  theme(legend.position='bottom')
+
+grid.arrange(p1, p2, ncol = 2)
+```
+
+
 Where is the arable land? Calculate the proportion of land with =< 5 degree slope. Also find land with slope between 5 and 15 degrees, as potential land for terracing.
 ```{r arable_land}
 arable_proportion <- (slope <= 5) %>% 
   aggregate(fact = 10, fun = sum) %>% 
   mask(elevation) %>%
   `/`(100)
+
+terraceable_proportion <- (slope > 5 & slope <= 15) %>% 
+  aggregate(fact = 10, fun = sum) %>% 
+  mask(elevation) %>%
+  `/`(100)
+```
+
+```{r echo = F}
+p1 <- as.data.frame(arable_proportion, xy = T, na.rm = T) %>%
+  ggplot(aes(x, y)) +
+  geom_raster(aes(fill = layer)) +
+  scale_fill_viridis(name = 'Proportion of\n arable land') +
+  theme_void() +
+  coord_quickmap() +
+  labs(title = 'Arable land')
+
+p2 <- as.data.frame(terraceable_proportion, xy = T, na.rm = T) %>%
+  ggplot(aes(x, y)) +
+  geom_raster(aes(fill = layer)) +
+  scale_fill_viridis(name = 'Proportion of land\n suitable for terracing') +
+  theme_void() +
+  coord_quickmap() +
+  labs(title = 'Terrace-able land')
+
+grid.arrange(p1, p2, ncol = 2)
+```
+
+Now import temperature and precipitation data.
+```{r climate}
+prec <- brick('data/CHELSA/prec_1km.tif') %>% sum %>% projectRaster(elevation)
+gdd5 <- raster('data/CHELSA/gdd5_1km.tif')
+
+prec_dat <- as.data.frame(prec, xy = T, na.rm = T)
+gdd5_dat <- as.data.frame(gdd5, xy = T, na.rm = T)
+```
+
+```{r echo = F}
+p1 <- ggplot(prec_dat, aes(x, y)) +
+  geom_raster(aes(fill = layer)) +
+  scale_fill_distiller(name = 'Millimeters', palette = 'YlGnBu', direction = 1, guide = 'legend', breaks = c(250, 500, 750, 1000)) +
+  theme_void() +
+  coord_quickmap() +
+  labs(title = 'Annual Precipitation') +
+  theme(legend.position='bottom')
+
+p2 <- ggplot(gdd5_dat, aes(x, y)) +
+  geom_raster(aes(fill = gdd5_1km)) +
+  scale_fill_distiller(name = 'Degree Days', palette = 'YlOrRd', direction = 1, guide = 'legend') +
+  theme_void() +
+  coord_quickmap() +
+  labs(title = 'Growing Degree Days') +
+  theme(legend.position='bottom')
+
+grid.arrange(p1, p2, ncol = 2)
+```
+Soils
+```{r}
+soils <- merge(raster('data/soils/TAXNWRB_1km_Tunisia.tiff') %>% crop(bbox),
+               raster('data/soils/TAXNWRB_1km_Algeria.tiff') %>% crop(bbox), tolerance = .3)
+soils_dat <- as.data.frame(soils, xy =  T, na.rm = T) %>%
+  rename(type = layer) %>%
+  mutate(type = as.factor(type))
+```
+
+```{r echo = F}
+ggplot(soils_dat, aes(x, y)) +
+  geom_raster(aes(fill = type)) +
+  scale_fill_discrete(name = 'Soil type') +
+  theme_void() +
+  coord_quickmap() +
+  labs(title = 'Soils')
 ```
 
 
-Get the area of each grid cell, in km2.
-```{r}
-area <- area(elevation)
+Vegetation
+```{r vegetation}
+pft <- raster('data/MODIS/MCD12Q1.051_20170918110118/MCD12Q1.A2001001.Land_Cover_Type_5.tif') %>%
+  projectRaster(disaggregate(elevation, 2), method = 'ngb') %>%
+  as.data.frame(xy = T, na.rm = T) %>%
+    rename(pft = MCD12Q1.A2001001.Land_Cover_Type_5) %>%
+  #filter(!pft %in% c(0, 7:10)) %>%
+  mutate(pft = recode_factor(as.factor(pft),
+                               `0` = 'Water',
+                               `1` = 'Evergreen Needleleaf trees',
+                               `2` = 'Evergreen Broadleaf trees',
+                               `3` = 'Deciduous Needleleaf trees',
+                               `4` = 'Deciduous Broadleaf trees',
+                               `5` = 'Shrub',
+                               `6` = 'Grass',
+                               `7` = 'Cereal crops',
+                               `8` = 'Broad-leaf crops',
+                               `9` = 'Urban and built-up',
+                               `10` =	'Snow and ice',
+                               `11` = 'Barren or sparse vegetation'))
+```
+
+```{r echo = F}
+lc_colors <- c('#000080', '#008000', '#00FF00', '#99CC00', '#99FF99', '#FFCC99', '#FF9900', '#FFFF00', '#999966', '#FF0000', '#FFFFFF', '#808080') 
+
+# colors inspired by https://lpdaac.usgs.gov/about/news_archive/modisterra_land_cover_types_yearly_l3_global_005deg_cmg_mod12c1
+ggplot(pft, aes(x, y)) + 
+  geom_tile(aes(fill = pft)) + 
+  scale_fill_manual(values = lc_colors) + 
+  theme_void() +
+  coord_quickmap() +
+  labs(title = 'Vegetation distribution')
 ```
 
 Let's put all these environmental rasters together in a single brick for easier access.
 ```{r}
-environment <- brick(arable_proportion, prec, area) %>%
+environment <- brick(arable_proportion, prec) %>%
   as.data.frame(na.rm = T, xy = T, centroids = T) %>%
   as_tibble %>%
   remove_rownames %>%
-  rename(arable_proportion = layer.1, precipitation = layer.2, area = layer.3) %>%
+  rename(arable_prop = layer.1, precipitation = layer.2) %>%
   mutate(precipitation = precipitation / 1000,
          x = round(x, 6), y = round(y, 6))
 environment
