--- a/agroecology.Rmd
+++ b/agroecology.Rmd
@@ -19,6 +19,7 @@ library(mgcv) # for fitting functions to data
 library(viridis) # for color palettes
 library(gridExtra) # for arranging plots
 library(pbapply) # for progress bar and parallelization
+library(pleiades)
 library(gdistance)
 ```
 
@@ -70,6 +71,7 @@ expand.grid(lf = seq(0,1,.01), q = seq(0,1,.01), r = c(.1, .5, 1)) %>%
   facet_wrap(~as.factor(r)) +
   theme_minimal()
 ```
+
 ```{r}
 p = 1
 b = 1
@@ -262,7 +264,7 @@ Finally eat the harvested food, updating storage and food_ratio accordingly
 eat <- function(households){
   households %>%
     mutate(total.cal.req = n_inhabitants * wheat.req,
-           food_ratio = (storage + harvest) / total.cal.req,
+           food_ratio = pmin(1, (storage + harvest) / total.cal.req),
            old.storage = storage,
            storage = if_else(total.cal.req <= storage, harvest, pmax(harvest - (total.cal.req - old.storage), 0))) %>%
     select(-old.storage, -total.cal.req, -harvest)
@@ -271,53 +273,31 @@ eat <- function(households){
 
 ### Demography
 
-#### Deterministic Demography
-```{r leslie-matrix, eval=FALSE, include=FALSE}
-library(demogR) # leslie matrices
-
-model_west <- cdmltw(sex = 'F')
-#survivorship <- model_west$nLx[3,]
-#fertility <- c(0, 0, 0, 0.022, 0.232, 0.343, 0.367, 0.293, 0.218, 0.216, 0.134, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
-leslie <- leslie.matrix(survivorship, fertility)
-project.leslie(leslie, rep(1, 10), tmax = 10, pop.sum = T) %>% plot
-
-
-plot(survivorship)
-plot(model_west$nmx[3,] * model_west$width / (1 + model_west$nmx[3,] * (model_west$width - model_west$nax[3,])))
-plot(mortality_table$rate)
-```
-
-```{r eval=FALSE, include=FALSE}
-age_classes <- c(0, 1, seq(5, 95, 5))
-
-tibble(age = age_classes,
-       survivorship = model_west$nqx[3,],
-       fertility = fertility) %>%
-  gather(var, value, survivorship:fertility) %>%
-ggplot(aes(age, value, color = var)) +
-  geom_line() +
-  labs(title = 'Fertility and Mortality Rates', subtitle = 'Per capita fertility (blue) and mortality (red) in the Roman Empire', x = 'Age', y = 'Vital rate') +
-  theme_bw()
-```
-
-#### Stochastic Demography
 Generate fertility and mortality tables from pre-prepared data.
 ```{r birth-death}
 fertility_table <- tibble(
   age = 10:49,
-  rate = rep(c(0.022, 0.232, 0.343, 0.367, 0.293, 0.218, 0.216, 0.134), each = 5)
+  fertility_rate = rep(c(0.022, 0.232, 0.343, 0.367, 0.293, 0.218, 0.216, 0.134), each = 5)
 ) %>%
   .[-1:-2,]
+
 mortality_table <- tibble(
-  age = c(0:84),
-  rate = c(0.4669, rep(0.0702, 4), rep(c(0.0132, 0.0099, 0.0154, 0.0172, 0.0195, 0.0223, 0.0259, 0.0306, 0.0373, 0.0473, 0.0573, 0.0784, 0.1042, 0.1434, 0.2039, 0.2654), each = 5))
+  age = 0:95,
+  mortality_rate = c(0.4669, rep(0.0702, 4), rep(c(0.0132, 0.0099, 0.0154, 0.0172, 0.0195, 0.0223, 0.0259, 0.0306, 0.0373, 0.0473, 0.0573, 0.0784, 0.1042, 0.1434, 0.2039), each = 5), rep( 0.2654, 16))
+)
+
+cd <- demogR::cdmltw()$nmx[3,]
+mortality_table_cd <- tibble(
+  age = 0:99,
+  mortality_rate = c(cd[1], rep(cd[2], 4), rep(cd[3:21], each = 5))
 )
 ```
 
 ```{r echo = F}
-ggplot(mortality_table, aes(age, rate)) +
-  geom_line(color = 'red') +
-  geom_line(data = fertility_table, color = 'blue') +
+ggplot(mortality_table, aes(age)) +
+  geom_line(aes(y = mortality_rate), color = 'red') +
+  geom_line(data = mortality_table_cd, aes(y = mortality_rate), linetype = 2, color = 'red') +
+  geom_line(data = fertility_table, aes(y = fertility_rate), color = 'blue') +
   labs(title = 'Fertility and Mortality Rates', subtitle = 'Per capita fertility (blue) and mortality (red) in the Roman Empire', x = 'Age', y = 'Vital rate') +
   theme_bw()
 ```
@@ -326,52 +306,66 @@ Calculate functions for vital rate elasticities from pre-prepared data.
 ```{r vital-rate-elasticity, warning = F, message = F}
 fertility_elasticity <- read_csv('data/fertility_data.csv', skip = 1) %>% 
   rename(food_ratio = X, fertility_reduction = Y) %>%
-  gam(fertility_reduction ~ s(food_ratio), dat = .)
-mort_elast <- read_csv('data/mortality_dataset.csv', skip = 1)
+  gam(fertility_reduction ~ s(food_ratio, k = 35), family = betar(eps = 0.0001), dat = .)
 
-survivorship_elasticity <- bind_rows(
-    mort_elast[1:2] %>% mutate(age = 1) %>% rename(food_ratio = X, mortality_reduction = Y), 
-    mort_elast[3:4] %>% mutate(age = 25) %>% rename(food_ratio = X_1, mortality_reduction = Y_1),
-    mort_elast[5:6] %>% mutate(age = 5) %>% rename(food_ratio = X_2, mortality_reduction = Y_2),
-    mort_elast[7:8] %>% mutate(age = 65) %>% rename(food_ratio = X_3, mortality_reduction = Y_3)
-  ) %>%
-  group_by(age) %>%
-  nest %>% 
-  mutate(model = map(data, ~gam(mortality_reduction ~ s(food_ratio), dat = .))) %>%
-  select(-data) %>%
-  arrange(age) %>%
-  slice(c(rep(1, 5), rep(2, 20), rep(3, 40), rep(4, 20))) %>%
-  mutate(age = 0:84)
+survival_elasticity <- read_csv('data/mortality_dataset.csv', skip = 1)
+survival_elasticity <- bind_rows(
+    survival_elasticity[1:2] %>% mutate(age = 1) %>% rename(food_ratio = X, survival_reduction = Y), 
+    survival_elasticity[3:4] %>% mutate(age = 25) %>% rename(food_ratio = X_1, survival_reduction = Y_1),
+    survival_elasticity[5:6] %>% mutate(age = 5) %>% rename(food_ratio = X_2, survival_reduction = Y_2),
+    survival_elasticity[7:8] %>% mutate(age = 65) %>% rename(food_ratio = X_3, survival_reduction = Y_3)) %>%
+  filter(!is.na(food_ratio)) %>%
+  gam(survival_reduction ~ te(food_ratio, age, k = c(45, 4)), family = betar(eps = 0.0001), dat = .)
+```
+
+For simplicity now, make survival elasticity like fertility and have a constant function for all age classes.
+```{r}
+survival_elasticity <- read_csv('data/mortality_dataset.csv', skip = 1) %>%
+  .[3:4] %>% 
+  mutate(age = 25) %>% 
+  rename(food_ratio = X_1, survival_reduction = Y_1) %>%
+  filter(!is.na(food_ratio)) %>%
+  gam(survival_reduction ~ s(food_ratio, k = 15), family = betar(eps = 0.0001), dat = .)
 ```
 
 Birth
 ```{r reproduction}
-reproduce <- function(inhabitants, food_ratio){
-  fertility_reduction <- ifelse(food_ratio >= 1, 1, predict(fertility_elasticity, list(food_ratio = food_ratio)))
-  
-  babies <- inhabitants %>%
-    inner_join(fertility_table, by = 'age') %>%  # find the fertility rate corresponding to the individual's age, inner join makes sure only those of child bearing age reproduce
-    mutate(baby = (rate / 2 * fertility_reduction) > runif(n())) %>%  # divide by two to make everyone female ...
-    .$baby %>% # select just the babies column
-    sum  # add it up to determine the number of newborns in the house
-  
-  if(babies > 0) inhabitants <- add_row(inhabitants, age = rep(0, babies))
+calculate_births <- function(households){
+  households %>%
+    unnest(inhabitants) %>%
+    left_join(fertility_table, by = 'age') %>%  # find the fertility rate corresponding to age
+    mutate(fertility_rate = if_else(is.na(fertility_rate), 0, fertility_rate),
+           fertility_reduction = predict(fertility_elasticity, ., type = 'response'),
+           baby = rbernoulli(n(), fertility_rate / 2 * fertility_reduction)) %>%  # divide by two to make everyone female ...
+    group_by(settlement, household) %>%
+    summarise(births = sum(baby)) %>%
+    .$births
+}
+
+give_birth <- function(inhabitants, births){
+  if(births > 0) inhabitants <- add_row(inhabitants, age = rep(0, births))
   return(inhabitants)
+}
+
+reproduce <- function(households){
+  households %>%
+  mutate(births = calculate_births(.),
+         inhabitants = map2(inhabitants, births, give_birth)) %>%
+    select(-births)
 }
 ```
 
 Death
 ```{r}
-die <- function(inhabitants){
-  inhabitants %>%
-    unnest %>%  # running die on the unnested dataframe, rather than mapping as in reproduce, leads to some spead improvements
-    inner_join(mortality_table, by = 'age') %>%
-    inner_join(survivorship_elasticity, by = 'age') %>%
-    mutate(survivorship_reduction = ifelse(food_ratio >= 1, 1, map2_dbl(model, food_ratio, ~predict(.x, list(food_ratio = .y)))),
-           dead = ((1 - rate) * survivorship_reduction) < runif(n())) %>%
-    filter(dead == F) %>%
+die <- function(households){
+  households %>%
+    unnest(inhabitants) %>%
+    inner_join(mortality_table_cd, by = 'age') %>% # inner join has the effect of killing off all those over 95
+    mutate(#survival_reduction = predict(survival_elasticity, ., type = 'response'),
+           survive = rbernoulli(n(), (1 - mortality_rate) * 1)) %>% # survival_reduction)) %>%
+    filter(survive == T) %>%
     mutate(age = age + 1) %>%
-    select(-survivorship_reduction, -dead, -rate, -model) %>%
+    select(-survive, -mortality_rate) %>% #, -survival_reduction) %>%
     nest(age, .key = inhabitants)
 }
 ```
@@ -379,16 +373,19 @@ die <- function(inhabitants){
 Agents first reproduce, then die, then age, and finally remove households with no inhabiants.
 ```{r birthdeath}
 birth_death <- function(households){
+ # mem <- select(households, settlement, household, yield_memory) #separate out the yield memory column and add it back in the end due to this issue: https://github.com/tidyverse/tidyr/issues/249
+
   households %>%
-    mutate(inhabitants = map2(inhabitants, food_ratio, reproduce)) %>%
+    reproduce %>%
     die %>% 
     mutate(n_inhabitants = map_int(inhabitants, nrow),
-           laborers = map_dbl(inhabitants, ~filter(.x, age >= 20 & age < 45) %>% nrow))
+           laborers = map_dbl(inhabitants, ~ filter(.x, age >= 15 & age < 65) %>% nrow)) #%>%
+    #left_join(mem, by = c('settlement', 'household'))
 }
 ```
 
 If households get larger than 10 inhabitants, they split into two.
-```{r fission}
+```{r fission, eval=FALSE, include=FALSE}
 fission <- function(households){
   static.households <- households %>% 
     filter(n_inhabitants < 10)
